feat: get property
- Replced "requiredProperties" by "required" in swagger schemas
- Replced "content" by "contentEncoding" in swagger schemas
